footer pasado a scss. El bug de elementos invisibles está en las queries. Ultima version no segura 8 de feb 23:04

--- a/css/main.css
+++ b/css/main.css
@@ -1473,4 +1473,113 @@ h4 {
   width: 30%;
   margin-left: 35%;
 }
+
+/*.....................................iNDEX: FOOTER(TODAS LAS CLASES SON RECICLABLES)..................*/
+footer {
+  background-color: #523024;
+  color: #fff;
+  padding: 1rem;
+}
+
+.footer__container {
+  display: -ms-grid;
+  display: grid;
+      grid-template-areas: "tarjeta nav__footer newsletter btn";
+  -ms-grid-columns: 30% 30% 30% 30%;
+      grid-template-columns: 30% 30% 30% 30%;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -ms-flex-line-pack: end;
+      align-content: flex-end;
+  font-size: 1.5rem;
+}
+
+.footer__tarjeta {
+  font-size: 1.5rem;
+  font-family: cursive;
+  text-align: left;
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  grid-area: tarjeta;
+  grid-column: auto;
+  grid-row: auto;
+}
+
+.footer__tarjeta--logo {
+  max-height: 10rem;
+  width: auto;
+}
+
+.footer__nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  grid-column: auto;
+  grid-row: auto;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  list-style: none;
+  text-align: center;
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
+  grid-area: nav__footer;
+  margin-top: 2rem;
+  margin-right: 5rem;
+}
+
+.footer__nav a {
+  text-align: center;
+  font-size: 2rem;
+  font-family: cursive;
+  color: #fff;
+}
+
+.footer__nav li {
+  font-size: 1rem;
+}
+
+.newsletter {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  grid-column: auto;
+  grid-row: auto;
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+  margin-left: 1rem;
+  font-size: 3rem;
+  -ms-grid-row: 1;
+  -ms-grid-column: 3;
+  grid-area: newsletter;
+}
+
+.newsletter__titulo {
+  margin-bottom: 2rem;
+  font-family: "cursive";
+}
+
+.newsletter__footer__input {
+  margin-bottom: 2rem;
+  padding: 1rem;
+}
+
+.btn__enviar__footer {
+  height: 20%;
+  width: 55%;
+  margin-left: 33rem;
+  font-size: 1.5rem;
+  padding: 1.5rem;
+  -ms-grid-row: 1;
+  -ms-grid-column: 4;
+  grid-area: btn;
+  margin-left: 5rem;
+  grid-column: auto;
+  grid-row: auto;
+}
 /*# sourceMappingURL=main.css.map */
